--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
-project(Interview)
+project(CPP-Primer)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Interview main.cpp)
+add_executable(main main.cpp chapter1.h chapter1.cpp chapter2.cpp chapter2.h Sales_data.h chapter3.cpp chapter3.h)
