--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CPP-Primer)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(main main.cpp chapter1.h chapter1.cpp chapter2.cpp chapter2.h Sales_data.h chapter3.cpp chapter3.h)
+add_executable(main main.cpp chapter1.h chapter1.cpp chapter2.cpp chapter2.h Sales_data.h chapter3.cpp chapter3.h chapter4.cpp chapter4.h)
